Bindings/Java/src/main/java/com/oculusvr/api/OvrLibrary.java

  /**
   * viewport changes after the fact. This can be used to adjust render size every frame, if desired.<br>
   * Original signature : <code>void ovrHmd_GetRenderScaleAndOffset(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:592</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetRenderScaleAndOffset(com.oculusvr.api.OvrLibrary.ovrHmd, com.oculusvr.api.ovrEyeDesc_.ByValue, int, com.oculusvr.api.ovrVector2f_[])} and {@link #ovrHmd_GetRenderScaleAndOffset(com.sun.jna.Pointer, com.oculusvr.api.ovrEyeDesc_.ByValue, int, com.oculusvr.api.ovrVector2f_[])} instead
   */
  @Deprecated 
  void ovrHmd_GetRenderScaleAndOffset(Pointer hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, Pointer uvScaleOffsetOut);
  /**
   * viewport changes after the fact. This can be used to adjust render size every frame, if desired.<br>
   * Original signature : <code>void ovrHmd_GetRenderScaleAndOffset(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:592</i>
   */
  void ovrHmd_GetRenderScaleAndOffset(OvrLibrary.ovrHmd hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, ovrVector2f_ uvScaleOffsetOut[]);
  /**
   * viewport changes after the fact. This can be used to adjust render size every frame, if desired.<br>
   * Original signature : <code>void ovrHmd_GetRenderScaleAndOffset(ovrHmd, ovrEyeDesc, unsigned int, ovrVector2f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:592</i>
   */
  void ovrHmd_GetRenderScaleAndOffset(Pointer hmd, ovrEyeDesc_.ByValue eyeDesc, int distortionCaps, ovrVector2f_ uvScaleOffsetOut[]);
  /**
   * with every frame and pass the index to RenderThread for processing.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_GetFrameTiming(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:599</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetFrameTiming(com.oculusvr.api.OvrLibrary.ovrHmd, int)} and {@link #ovrHmd_GetFrameTiming(com.sun.jna.Pointer, int)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_GetFrameTiming(Pointer hmd, int frameIndex);
  /**
   * with every frame and pass the index to RenderThread for processing.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_GetFrameTiming(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:599</i>
   */
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_GetFrameTiming(OvrLibrary.ovrHmd hmd, int frameIndex);
  /**
   * pass the same frame index as was used for GetFrameTiming on the main thread.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_BeginFrameTiming(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:604</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_BeginFrameTiming(com.oculusvr.api.OvrLibrary.ovrHmd, int)} and {@link #ovrHmd_BeginFrameTiming(com.sun.jna.Pointer, int)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_BeginFrameTiming(Pointer hmd, int frameIndex);
  /**
   * pass the same frame index as was used for GetFrameTiming on the main thread.<br>
   * Original signature : <code>ovrFrameTiming ovrHmd_BeginFrameTiming(ovrHmd, unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:604</i>
   */
  com.oculusvr.api.ovrFrameTiming_.ByValue ovrHmd_BeginFrameTiming(OvrLibrary.ovrHmd hmd, int frameIndex);
  /**
   * before this call to reduce latency and ensure proper timing.<br>
   * Original signature : <code>void ovrHmd_EndFrameTiming(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:609</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_EndFrameTiming(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_EndFrameTiming(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  void ovrHmd_EndFrameTiming(Pointer hmd);
  /**
   * before this call to reduce latency and ensure proper timing.<br>
   * Original signature : <code>void ovrHmd_EndFrameTiming(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:609</i>
   */
  void ovrHmd_EndFrameTiming(OvrLibrary.ovrHmd hmd);
  /**
   * isn't called. Resets internal frame index to the specified number.<br>
   * Original signature : <code>void ovrHmd_ResetFrameTiming(ovrHmd, unsigned int, bool)</code><br>
   * <i>native declaration : OVR_CAPI.h:614</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_ResetFrameTiming(com.oculusvr.api.OvrLibrary.ovrHmd, int, byte)} and {@link #ovrHmd_ResetFrameTiming(com.sun.jna.Pointer, int, byte)} instead
   */
  @Deprecated 
  void ovrHmd_ResetFrameTiming(Pointer hmd, int frameIndex, byte vsync);
  /**
   * isn't called. Resets internal frame index to the specified number.<br>
   * Original signature : <code>void ovrHmd_ResetFrameTiming(ovrHmd, unsigned int, bool)</code><br>
   * <i>native declaration : OVR_CAPI.h:614</i>
   */
  void ovrHmd_ResetFrameTiming(OvrLibrary.ovrHmd hmd, int frameIndex, byte vsync);
  /**
   * Must be called between ovrHmd_BeginFrameTiming & ovrHmd_EndFrameTiming.<br>
   * Original signature : <code>ovrPosef ovrHmd_GetEyePose(ovrHmd, ovrEyeType)</code><br>
   * <i>native declaration : OVR_CAPI.h:619</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetEyePose(com.oculusvr.api.OvrLibrary.ovrHmd, int)} and {@link #ovrHmd_GetEyePose(com.sun.jna.Pointer, int)} instead
   */
  @Deprecated 
  com.oculusvr.api.ovrPosef_.ByValue ovrHmd_GetEyePose(Pointer hmd, int eye);
  /**
   * Must be called between ovrHmd_BeginFrameTiming & ovrHmd_EndFrameTiming.<br>
   * Original signature : <code>ovrPosef ovrHmd_GetEyePose(ovrHmd, ovrEyeType)</code><br>
   * <i>native declaration : OVR_CAPI.h:619</i>
   */
  com.oculusvr.api.ovrPosef_.ByValue ovrHmd_GetEyePose(OvrLibrary.ovrHmd hmd, int eye);
  /**
   * Must be called on the same thread as ovrHmd_BeginFrameTiming.<br>
   * Original signature : <code>void ovrHmd_GetEyeTimewarpMatrices(ovrHmd, ovrEyeType, ovrPosef, ovrMatrix4f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:626</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetEyeTimewarpMatrices(com.oculusvr.api.OvrLibrary.ovrHmd, int, com.oculusvr.api.ovrPosef_.ByValue, com.oculusvr.api.ovrMatrix4f_[])} and {@link #ovrHmd_GetEyeTimewarpMatrices(com.sun.jna.Pointer, int, com.oculusvr.api.ovrPosef_.ByValue, com.oculusvr.api.ovrMatrix4f_[])} instead
   */
  @Deprecated 
  void ovrHmd_GetEyeTimewarpMatrices(Pointer hmd, int eye, com.oculusvr.api.ovrPosef_.ByValue renderPose, Pointer twmOut);
  /**
   * Must be called on the same thread as ovrHmd_BeginFrameTiming.<br>
   * Original signature : <code>void ovrHmd_GetEyeTimewarpMatrices(ovrHmd, ovrEyeType, ovrPosef, ovrMatrix4f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:626</i>
   */
  void ovrHmd_GetEyeTimewarpMatrices(OvrLibrary.ovrHmd hmd, int eye, com.oculusvr.api.ovrPosef_.ByValue renderPose, ovrMatrix4f_ twmOut[]);
  /**
   * Must be called on the same thread as ovrHmd_BeginFrameTiming.<br>
   * Original signature : <code>void ovrHmd_GetEyeTimewarpMatrices(ovrHmd, ovrEyeType, ovrPosef, ovrMatrix4f[2])</code><br>
   * <i>native declaration : OVR_CAPI.h:626</i>
   */
  void ovrHmd_GetEyeTimewarpMatrices(Pointer hmd, int eye, com.oculusvr.api.ovrPosef_.ByValue renderPose, ovrMatrix4f_ twmOut[]);
  /**
   * Used to generate projection from ovrEyeDesc::Fov.<br>
   * Original signature : <code>ovrMatrix4f ovrMatrix4f_Projection(ovrFovPort, float, float, ovrBool)</code><br>
   * <i>native declaration : OVR_CAPI.h:635</i>
   */
  ovrMatrix4f_.ByValue ovrMatrix4f_Projection(com.oculusvr.api.ovrFovPort_.ByValue fov, float znear, float zfar, byte rightHanded);
  /**
   * orthoDistance = distance from camera, such as 0.8m<br>
   * Original signature : <code>ovrMatrix4f ovrMatrix4f_OrthoSubProjection(ovrMatrix4f, ovrVector2f, float, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:641</i>
   */
  ovrMatrix4f_.ByValue ovrMatrix4f_OrthoSubProjection(ovrMatrix4f_.ByValue projection, ovrVector2f_.ByValue orthoScale, float orthoDistance, float eyeViewAdjustX);
  /**
   * value as used in sensor messages.<br>
   * Original signature : <code>double ovr_GetTimeInSeconds()</code><br>
   * <i>native declaration : OVR_CAPI.h:646</i>
   */
  double ovr_GetTimeInSeconds();
  /**
   * Waits until the specified absolute time.<br>
   * Original signature : <code>double ovr_WaitTillTime(double)</code><br>
   * <i>native declaration : OVR_CAPI.h:649</i>
   */
  double ovr_WaitTillTime(double absTime);
  /**
   * be used to clear the screen.<br>
   * Original signature : <code>ovrBool ovrHmd_ProcessLatencyTest(ovrHmd, unsigned char[3])</code><br>
   * <i>native declaration : OVR_CAPI.h:658</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_ProcessLatencyTest(com.oculusvr.api.OvrLibrary.ovrHmd, java.nio.ByteBuffer)} and {@link #ovrHmd_ProcessLatencyTest(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  byte ovrHmd_ProcessLatencyTest(Pointer hmd, Pointer rgbColorOut);
  /**
   * be used to clear the screen.<br>
   * Original signature : <code>ovrBool ovrHmd_ProcessLatencyTest(ovrHmd, unsigned char[3])</code><br>
   * <i>native declaration : OVR_CAPI.h:658</i>
   */
  byte ovrHmd_ProcessLatencyTest(OvrLibrary.ovrHmd hmd, ByteBuffer rgbColorOut);
  /**
   * Buffer is valid until next call.<br>
   * Original signature : <code>char* ovrHmd_GetLatencyTestResult(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:662</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetLatencyTestResult(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_GetLatencyTestResult(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  String ovrHmd_GetLatencyTestResult(Pointer hmd);
  /**
   * Buffer is valid until next call.<br>
   * Original signature : <code>char* ovrHmd_GetLatencyTestResult(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:662</i>
   */
  String ovrHmd_GetLatencyTestResult(OvrLibrary.ovrHmd hmd);
  /**
   * pixel-read back method (-1 for invalid or N/A)<br>
   * Original signature : <code>double ovrHmd_GetMeasuredLatencyTest2(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:666</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetMeasuredLatencyTest2(com.oculusvr.api.OvrLibrary.ovrHmd)} and {@link #ovrHmd_GetMeasuredLatencyTest2(com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  double ovrHmd_GetMeasuredLatencyTest2(Pointer hmd);
  /**
   * pixel-read back method (-1 for invalid or N/A)<br>
   * Original signature : <code>double ovrHmd_GetMeasuredLatencyTest2(ovrHmd)</code><br>
   * <i>native declaration : OVR_CAPI.h:666</i>
   */
  double ovrHmd_GetMeasuredLatencyTest2(OvrLibrary.ovrHmd hmd);
  /**
   * Returns defaultValue if property doesn't exist.<br>
   * Original signature : <code>float ovrHmd_GetFloat(ovrHmd, const char*, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:702</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetFloat(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String, float)} and {@link #ovrHmd_GetFloat(com.sun.jna.Pointer, com.sun.jna.Pointer, float)} instead
   */
  @Deprecated 
  float ovrHmd_GetFloat(Pointer hmd, Pointer propertyName, float defaultVal);
  /**
   * Returns defaultValue if property doesn't exist.<br>
   * Original signature : <code>float ovrHmd_GetFloat(ovrHmd, const char*, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:702</i>
   */
  float ovrHmd_GetFloat(OvrLibrary.ovrHmd hmd, String propertyName, float defaultVal);
